--- a/vpbv1.html
+++ b/vpbv1.html
@@ -58,17 +58,17 @@ h1.hidden {
 <body>
 <center>
 	<div class="video-wrap" id="section1">
-		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logocft.png" height=10% width=5%>
+		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logocft.png" style="max-width:5%;height:auto;">
 		<H1>Virtual Photo Booth</H1>
-		<video id="video" autoplay style="max-width:100%;max-height:80%;"></video>
+		<video id="video" autoplay style="max-width:100%;max-height:auto;"></video>
 		<div id="Cotroller">
 			<button id="snap" class="btn"><i class="fa fa-camera"></i> Capture</button>
 		</div>
 	</div>
 	<div id="section2">
-		<image  src="logocft.png" style="max-width:auto;height:100%;">
+		<image  src="logocft.png" style="max-width:5%;height:auto;">
 		<H1>Looks Beautiful</H1>
-	<canvas id="canvas" width= 720 height= 1280 style="max-width:100%;height:60%;">
+	<canvas id="canvas" width= 640 height= 480 style="max-width:100%;height:auto;">
 		</canvas>
 		<div id="control1">
 			<button id= "edit" class="btn"><i class="fa fa-upload"></i> Like</button>
@@ -87,6 +87,8 @@ h1.hidden {
 </center>
 	<script type="text/javascript">
 		'use strict';
+		const sw=screen.width;
+		const sh=screen.height;
 		const video =document.getElementById('video');
 		const canvas1=document.getElementById('canvas');
 		const snap=document.getElementById('snap');
@@ -100,7 +102,7 @@ h1.hidden {
 		const constraints={
 			audio: false,
 			video:{
-				width: 720, height: 1280
+				width: 640, height: 480
 			}
 		};
 		async function init(){
@@ -131,7 +133,7 @@ h1.hidden {
 
 		var context= canvas1.getContext('2d');  
 		snap.addEventListener("click", function(){
-			context.drawImage(video,0,0,720,1280);
+			context.drawImage(video,0,0,640,480);
 			var x = document.getElementById("control1");
 			var y= document.getElementById("control2");
 			var s1= document.getElementById("section1");
@@ -147,7 +149,7 @@ h1.hidden {
 		frame.crossOrigin = 'anonymous';
 		frame.src = 'https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/frame.png';
 		edit.addEventListener("click", function(){
-			context.drawImage(frame,0,0,720,1280);
+			context.drawImage(frame,0,0,640,480);
 			var x = document.getElementById("control1");
 			var y= document.getElementById("control2");
   			if (x.style.display === "none") {
