--- a/vpbv1.html
+++ b/vpbv1.html
@@ -68,7 +68,7 @@ h1.hidden {
 	<div id="section2">
 		<image  src="logocft.png" style="max-width:5%;height:auto;">
 		<H1>Looks Beautiful</H1>
-	<canvas id="canvas" width= 640 height= 480 style="max-width:70%;height:auto;">
+	<canvas id="canvas" width= "640" height= "480" style="max-width:70%;height:70%;">
 		</canvas>
 		<div id="control1">
 			<button id= "edit" class="btn"><i class="fa fa-upload"></i> Like</button>
