--- a/vpbv1.html
+++ b/vpbv1.html
@@ -60,7 +60,7 @@ h1.hidden {
 	<div class="video-wrap" id="section1">
 		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logocft.png" style="max-width:5%;height:auto;">
 		<H1>Virtual Photo Booth</H1>
-		<video id="video" autoplay height="640" width="480" style="max-width:auto;max-height:auto;"></video>
+		<video id="video" autoplay height="640" width="480" style="max-width:60%;max-height:60%"></video>
 		<div id="Cotroller">
 			<button id="snap" class="btn"><i class="fa fa-camera"></i> Capture</button>
 		</div>
@@ -175,18 +175,9 @@ h1.hidden {
     			s2.style.display = "none";
 			}
 		function fdownload(canvas, filename) {
-  /// create an "off-screen" anchor tag
   			var lnk = document.createElement('a'), e;
-
-  /// the key here is to set the download attribute of the a tag
   			lnk.download = filename;
-
-  /// convert canvas content to data-uri for link. When download
-  /// attribute is set the content pointed to by link will be
-  /// pushed as "download" in HTML5 capable browsers
   			lnk.href = canvas.toDataURL("image/png;base64");
-
-  /// create a "fake" click-event to trigger the download
   			if (document.createEvent) {
     			e = document.createEvent("MouseEvents");
     			e.initMouseEvent("click", true, true, window,
