--- a/vpbv1.html
+++ b/vpbv1.html
@@ -9,10 +9,10 @@ body{
 background-image: linear-gradient(to bottom right, red, black);
 }
 h1 {
-margin-top: 20px;
+margin-top: 15px;
   font-weight: bold;
   color: #fff;
-  font-size: 40px;
+  font-size: 30px;
   font-family: Arial;
 }
 
@@ -60,7 +60,7 @@ h1.hidden {
 	<div class="video-wrap" id="section1">
 		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logocft.png" style="max-width:5%;height:auto;">
 		<H1>Virtual Photo Booth</H1>
-		<video id="video" autoplay height="640" width="480" style="max-width:60%;max-height:60%;"></video>
+		<video id="video" autoplay height="640" width="480" style="max-width:70%;height:70%;"></video>
 		<div id="Cotroller">
 			<button id="snap" class="btn"><i class="fa fa-camera"></i> Capture</button>
 		</div>
