--- a/vpbv1.html
+++ b/vpbv1.html
@@ -89,7 +89,7 @@ h1.hidden {
 		
 		<div id="control2">
 			<button  class="btn"  onclick="reset()"><i class="fa fa-recycle"></i> Retake</button>
-			<button  id="download" class="btn"><i class="fa fa-download"></i> Download </button>
+			<a href="https://deepayannandy.github.io/cft_photoboth/index.html"><button  id="download" class="btn"><i class="fa fa-download"></i> Download </button></a>
 		</div>
 	</div>
 </center>
