--- a/vpbv1.html
+++ b/vpbv1.html
@@ -88,7 +88,7 @@ h1.hidden {
 		</div>
 		
 		<div id="control2">
-			<button  id="download" class="btn"><i class="fa fa-download"></i> Download </button>
+			<a href="https://deepayannandy.github.io/cft_photoboth/"><button  id="download" class="btn"><i class="fa fa-download"></i> Download </button></a>
 		</div>
 	</div>
 	<div id="cr"><canvas id="canvasr" width= 640 height= 480 style="max-width:70%;height:auto;"></canvas></div>
