--- a/vpbv1.html
+++ b/vpbv1.html
@@ -99,6 +99,7 @@ h1.hidden {
 		const sw=screen.width;
 		const sh=screen.height;
 		const video =document.getElementById('video');
+		video.setAttribute("playsinline", true);
 		const canvas1=document.getElementById('canvas');
 		const canvasr=document.getElementById('canvasr');
 		const snap=document.getElementById('snap');
