--- a/vpbv1.html
+++ b/vpbv1.html
@@ -19,6 +19,7 @@ margin-top: 20px;
     display: inline-block;
     height: 48px;
     padding: 0;
+	border-radius: 0em;
     margin: 0;
     vertical-align: top;
     width: 64px;
