--- a/vpbv1.html
+++ b/vpbv1.html
@@ -16,8 +16,9 @@ margin-top: 20px;
   font-family: Arial;
 }
 .imbt{
-    display: inline-block;
     height: 48px;
+	border: none;
+  color: white;
     padding: 0;
 	border-radius: 0em;
     margin: 0;
