--- a/vpbv1.html
+++ b/vpbv1.html
@@ -18,6 +18,8 @@ margin-top: 20px;
 .imbt{
     height: 48px;
 	border: none;
+	margin-left: 10px;
+	margin-right: 10px;
   color: white;
     padding: 0;
 	border-radius: 0em;
