--- a/vpbv1.html
+++ b/vpbv1.html
@@ -18,8 +18,9 @@ margin-top: 20px;
 .imbt{
     height: 48px;
 	border: none;
-	margin-left: 10px;
-	margin-right: 10px;
+	margin-left: 20px;
+	margin-right: 20px;
+	background-color: white;
   color: white;
     padding: 0;
 	border-radius: 0em;
