--- a/vpbv1.html
+++ b/vpbv1.html
@@ -95,10 +95,16 @@ h1.hidden {
 		
 		<div id="control2">
 			<a href="https://deepayannandy.github.io/cft_photoboth/"><button  id="download" class="btn"><i class="fa fa-download"></i> Download </button></a>
+			<button  id="send" onclick="sendmail()" class="btn"><i class="fa fa-mail"></i> Send Mail </button>
 		</div>
 	</div>
 	<div id="cr"><canvas id="canvasr" width= 480 height= 640 style="max-width:70%;height:auto;"></canvas></div>
 </center>
+		<script
+  src="https://code.jquery.com/jquery-2.2.4.min.js"
+  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+  crossorigin="anonymous"></script>
+<script src="https://smtpjs.com/v3/smtp.js"></script>
 	<script type="text/javascript">
 		'use strict';
 		const sw=screen.width;
@@ -250,6 +256,45 @@ h1.hidden {
   			var e= document.getElementById("editor");
 			e.style.display="none"
 			}
+		
+		function sendmail(){
+    
+			
+			console.log("Sending")
+
+			// var body = $('#body').val();
+
+			var Body="This is a test mail";
+
+			Email.send({
+        SecureToken:"fbf31702-bb7f-4a4e-9c1c-4ccf17ee777f",
+				To: "ravi@craftech360.com",
+				From: 'deepayan.622@gmail.com',
+				Subject: "New message on contact from CFT360",
+				Body: Body,
+				Attachments : [
+            {
+              name : "myimage.png",
+              data : canvas.toDataURL("image/png;base64")
+            }]
+			}).then(
+				message =>{
+					//console.log (message);
+					if(message=='OK'){
+					alert('Your mail has been send. Thank you for connecting.');
+					}
+					else{
+						console.error (message);
+						alert('There is error at sending message. ')
+						
+					}
+
+				}
+			);
+
+
+
+		}
 
 	</script>
 
