--- a/vpbv1.html
+++ b/vpbv1.html
@@ -315,6 +315,7 @@ h1.hidden {
 					//console.log (message);
 					if(message=='OK'){
 					alert('Your mail has been send. Thank you for connecting.');
+						setTimeout(() => { location.replace("https://deepayannandy.github.io/cft_photoboth/"); }, 5000);
 					}
 					else{
 						console.error (message);
