--- a/vpbv1.html
+++ b/vpbv1.html
@@ -46,7 +46,7 @@ input {
 
 
 .btn {
-  background-color: DodgerBlue;
+  background-color: black;
   border: none;
   color: white;
   padding: 12px 16px;
