--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>A Product of CFT360</title>
+	<title>Puma Nitro</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body{
@@ -66,9 +66,8 @@ div{
 <center>
 	<div>
 		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logocft.png" style="max-width:10%;height:auto;">
-		<H1>Virtual Photo Booth</H1>
 		<a href="https://deepayannandy.github.io/cft_photoboth/vpbv1.html"><button class="button"><span>Take A Snap</span></button></a>
-		<H1>Your Tag Line</H1>
+		<H1>ALWAYS LOOKS TO DO <br> BETTER <br> WE ARE FOREVER FASTER</H1>
 	</div>
 </center>
 </body>
