--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body{
-background-image: linear-gradient(to bottom right, red, black);
+background-image: linear-gradient(to bottom right, red, red);
 }
 h1 {
-margin-top: 40px;
+margin-top: 60px;
   font-weight: bold;
   color: #fff;
   font-size: 25px;
