--- a/vpbv1.html
+++ b/vpbv1.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body{
-background-image: linear-gradient(to bottom right, red, black);
+background-image: linear-gradient(to bottom right, red, red);
 }
 h1 {
 margin-top: 20px;
@@ -86,7 +86,7 @@ h1.hidden {
 <body>
 <center>
 	<div class="video-wrap" id="section1">
-		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logocft.png" style="max-width:5%;height:auto;">
+		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logopuma.png" style="max-width:5%;height:auto;">
 		<H1>Virtual Photo Booth</H1>
 		<video id="video" autoplay height="480" width="640" style="max-width:70%;max-height:auto;"></video>
 		<div id="Cotroller">
