--- a/vpbv1.html
+++ b/vpbv1.html
@@ -88,7 +88,7 @@ h1.hidden {
 	<div class="video-wrap" id="section1">
 		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logopuma.png" style="max-width:5%;height:auto;">
 		<H1>Virtual Photo Booth</H1>
-		<video id="video" autoplay height="480" width="640" style="max-width:70%;max-height:auto;"></video>
+		<video id="video" autoplay height=600 width=600 style="max-width:70%;max-height:auto;"></video>
 		<div id="Cotroller">
 			<button id="snap" class="btn"><i class="fa fa-camera"></i> Capture</button>
 		</div>
@@ -96,7 +96,7 @@ h1.hidden {
 	<div id="section2">
 		<image  src="logocft.png" style="max-width:5%;height:auto;">
 		<H1>Looks Beautiful</H1>
-	<canvas id="canvas" width= 480 height= 640 style="max-width:70%;height:auto;">
+	<canvas id="canvas" width= 600 height= 600 style="max-width:70%;height:auto;">
 		</canvas>
 		<div id="editor">
 			<button  id="frame1" class="imbt"><img src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/frame_1_128x96.png" style="max-width:100%;max-height:auto;"/></button>
@@ -122,7 +122,7 @@ h1.hidden {
 			<button  id="send" onclick="sendmail()" class="btn"><i class="fa fa-email"></i> Send Mail </button>
 		</div>
 	</div>
-	<div id="cr"><canvas id="canvasr" width= 480 height= 640 style="max-width:70%;height:auto;"></canvas></div>
+	<div id="cr"><canvas id="canvasr" width= 600 height= 600 style="max-width:70%;height:auto;"></canvas></div>
 </center>
 		<script
   src="https://code.jquery.com/jquery-2.2.4.min.js"
@@ -153,7 +153,7 @@ h1.hidden {
 		const constraints={
 			audio: false,
 			video:{
-				width: 640, height: 480
+				width: 600, height: 600
 			}
 		};
 		async function init(){
@@ -185,8 +185,8 @@ h1.hidden {
 		var context= canvas1.getContext('2d');  
 		var context1= canvasr.getContext('2d');  
 		snap.addEventListener("click", function(){
-			context.drawImage(video,0,0,480,640);
-			context1.drawImage(video,0,0,480,640);
+			context.drawImage(video,0,0,600,600);
+			context1.drawImage(video,0,0,600,600);
 			var x = document.getElementById("control1");
 			var y= document.getElementById("control2");
 			var s1= document.getElementById("section1");
@@ -210,22 +210,22 @@ h1.hidden {
 		f3.crossOrigin = 'anonymous';
 		f3.src = 'https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/Photo_frame_1_1280x1280_PX.png_with_event_name__logo.png';
 		frame1.addEventListener("click", function(){ 
-			context.clearRect(0,0,480,640);
-			context.drawImage(canvasr,0,0,480,640);
-			context.drawImage(f1,0,0,480,640);
+			context.clearRect(0,0,600,600);
+			context.drawImage(canvasr,0,0,600,600);
+			context.drawImage(f1,0,0,600,600);
 			
   			
 		});
 		frame3.addEventListener("click", function(){ 
-			context.clearRect(0,0,480,640); 
-			context.drawImage(canvasr,0,0,480,640);
-			context.drawImage(f2,0,0,480,640);
+			context.clearRect(0,0,600,600); 
+			context.drawImage(canvasr,0,0,600,600);
+			context.drawImage(f2,0,0,600,600);
 			
 		});
 		frame2.addEventListener("click", function(){
-			context.clearRect(0,0,480,640);
-			context.drawImage(canvasr,0,0,480,640);
-			context.drawImage(f3,0,0,480,640);
+			context.clearRect(0,0,600,600);
+			context.drawImage(canvasr,0,0,600,600);
+			context.drawImage(f3,0,0,600,600);
 
 		});
 
