--- a/vpbv1.html
+++ b/vpbv1.html
@@ -94,7 +94,7 @@ h1.hidden {
 		</div>
 	</div>
 	<div id="section2">
-		<image  src="logocft.png" style="max-width:5%;height:auto;">
+		<image  src="logopuma.png" style="max-width:5%;height:auto;">
 		<H1>Looks Beautiful</H1>
 	<canvas id="canvas" width= 600 height= 600 style="max-width:70%;height:auto;">
 		</canvas>
