--- a/vpbv1.html
+++ b/vpbv1.html
@@ -16,7 +16,7 @@ margin-top: 20px;
   font-family: Arial;
 }
 .imbt{
-    height: 48px;
+    height: 60px;
 	border: none;
 	margin-left: 20px;
 	margin-right: 20px;
@@ -24,7 +24,7 @@ margin-top: 20px;
   color: white;
     padding: 0;
 	border-radius: 0em;
-    margin: 0;
+    margin: 10;
     vertical-align: top;
     width: 64px;
 }
@@ -88,7 +88,7 @@ h1.hidden {
 	<div class="video-wrap" id="section1">
 		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logopuma.png" style="max-width:5%;height:auto;">
 		<H1>Virtual Photo Booth</H1>
-		<video id="video" autoplay height=600 width=600 style="max-width:70%;max-height:auto;"></video>
+		<video id="video" autoplay height=600 width=600 style="max-width:100%;max-height:auto;"></video>
 		<div id="Cotroller">
 			<button id="snap" class="btn"><i class="fa fa-camera"></i> Capture</button>
 		</div>
@@ -100,9 +100,9 @@ h1.hidden {
 		</canvas>
 		<div id="editor">
 			<button  id="frame1" class="imbt"><img src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/pumaframe.png" style="max-width:100%;max-height:auto;"/></button>
-			<button  id="frame2" class="imbt"><img src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/F2_128X96.png" style="max-width:100%;max-height:auto;"/></button>
+			<!--  <button  id="frame2" class="imbt"><img src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/F2_128X96.png" style="max-width:100%;max-height:auto;"/></button>
 			<button  id="frame3" class="imbt"><img src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/F3_128x96.png" style="max-width:100%;max-height:auto;"/></button>
-		</div>
+		--> </div>
 		<div id="control1">
 			<button onclick="like()" class="btn"><i class="fa fa-heart"></i> Like</button>
 			<button onclick="reset()" class="btn"><i class="fa fa-reply"></i> Retake</button>
