--- a/vpbv1.html
+++ b/vpbv1.html
@@ -314,8 +314,7 @@ h1.hidden {
 				message =>{
 					//console.log (message);
 					if(message=='OK'){
-					alert('Your mail has been send. Thank you for connecting.');
-						setTimeout(() => { location.replace("https://deepayannandy.github.io/cft_photoboth/"); }, 5000);
+					setTimeout(() => { location.replace("https://deepayannandy.github.io/cft_photoboth/thankyou.html"); }, 500);
 					}
 					else{
 						console.error (message);
