--- a/vpbv1.html
+++ b/vpbv1.html
@@ -52,7 +52,7 @@ input {
 }
 
 .loader {
-  border: 16px solid black;
+  border: 16px solid #f3f3f3;
   border-radius: 50%;
   border-top: 16px solid black;
   width: 120px;
