--- a/vpbv1.html
+++ b/vpbv1.html
@@ -114,7 +114,7 @@ h1.hidden {
 <center>
 	<div class="video-wrap" id="section1">
 		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logopuma.png" style="max-width:5%;height:auto;">
-		<H1>Virtual Photo Booth</H1>
+                <br>
 		<video id="video" autoplay height=600 width=600 style="max-width:100%;max-height:auto;"></video>
 		<div id="Cotroller">
 			<button id="snap" class="btn"><i class="fa fa-camera"></i> Capture</button>
@@ -122,7 +122,7 @@ h1.hidden {
 	</div>
 	<div id="section2">
 		<image  src="logopuma.png" style="max-width:5%;height:auto;">
-		<H1 id="message">Looks Beautiful</H1>
+		<H1 id="message">Great shot</H1>
 	<canvas id="canvas" width= 600 height= 600 style="max-width:70%;height:auto;">
 		</canvas>
 		<div id="editor">
