--- a/vpbv1.html
+++ b/vpbv1.html
@@ -37,6 +37,7 @@ margin-top: 20px;
 }
 input {
   display:block;
+background-color: black;
   width:100%;
   margin:10px 0;
   padding:10px;
@@ -113,7 +114,7 @@ h1.hidden {
 <body>
 <center>
 	<div class="video-wrap" id="section1">
-		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logopuma.png" style="max-width:5%;height:auto;">
+		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logopuma.png" style="max-width:15%;height:auto;">
                 <br>
 		<video id="video" autoplay height=600 width=600 style="max-width:100%;max-height:auto;"></video>
 		<div id="Cotroller">
@@ -121,7 +122,7 @@ h1.hidden {
 		</div>
 	</div>
 	<div id="section2">
-		<image  src="logopuma.png" style="max-width:5%;height:auto;">
+		<image  src="logopuma.png" style="max-width:15%;height:auto;">
 		<H1 id="message">Great shot</H1>
 	<canvas id="canvas" width= 600 height= 600 style="max-width:70%;height:auto;">
 		</canvas>
@@ -316,6 +317,8 @@ h1.hidden {
 			var ct= document.getElementById("contact");
 			ct.style.display="block"
 			canvas1.style.display="none"
+			var msg= document.getElementById("message");
+			msg.innerHTML = "Will email it to you on the sopt"
 			}
 		
 		function sendmail(){
