--- a/vpbv1.html
+++ b/vpbv1.html
@@ -37,6 +37,7 @@ margin-top: 20px;
 }
 input {
   display:block;
+	color:white;
 background-color: black;
   width:100%;
   margin:10px 0;
@@ -116,7 +117,7 @@ h1.hidden {
 	<div class="video-wrap" id="section1">
 		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logopuma.png" style="max-width:15%;height:auto;">
                 <br>
-		<video id="video" autoplay height=600 width=600 style="max-width:100%;max-height:auto;"></video>
+		<video id="video" autoplay height=600 width=600 style="max-width:100%;max-height:70%;"></video>
 		<div id="Cotroller">
 			<button id="snap" class="btn"><i class="fa fa-camera"></i> Capture</button>
 		</div>
