--- a/thankyou.html
+++ b/thankyou.html
@@ -68,13 +68,13 @@ div{
 <body>
 <center>
 	<div>
-		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logopuma.png" style="max-width:5%;height:auto;"></image>
+		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logopuma.png" style="max-width:15%;height:auto;"></image>
 			<br>
-		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/thanku.png" style="max-width:30%;height:auto;"></image>
+		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/thanku.png" style="max-width:60%;height:auto;"></image>
 		<br>
 		<h3>Get in touch with Us</h3>
-		<a href="https://deepayannandy.github.io/cft_photoboth/vpbv1.html"><button class="button"><span>Home</span></button></a>
-		<a href="https://deepayannandy.github.io/cft_photoboth/vpbv1.html"><button class="button"><span>Follow Us</span></button></a>
+		<a href="https://deepayannandy.github.io/cft_photoboth/"><button class="button"><span>Home</span></button></a>
+		<a href="https://instagram.com/pumaindia?igshid=wp5lr45ot272"><button class="button"><span>Follow Us</span></button></a>
 	</div>
 </center>
 </body>
