--- a/vpbv1.html
+++ b/vpbv1.html
@@ -6,13 +6,13 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body{
-background-image: linear-gradient(to bottom right, red, red);
+background-image: linear-gradient(to bottom right, #EF4239, #EF4239);
 }
 h1 {
 margin-top: 20px;
   font-weight: bold;
   color: #fff;
-  font-size: 30px;
+  font-size: 20px;
   font-family: Arial;
 }
 h2 {
@@ -56,6 +56,7 @@ background-color: black;
 .loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
+margin-top:20px;
   border-top: 16px solid black;
   width: 120px;
   height: 120px;
@@ -96,7 +97,7 @@ background-color: black;
 
 div{
 	margin-top: 10px;
-  	margin-bottom: 10px;
+  	margin-bottom: 1px;
 }
 
 h1.hidden {
@@ -115,7 +116,7 @@ h1.hidden {
 <body>
 <center>
 	<div class="video-wrap" id="section1">
-		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logopuma.png" style="max-width:15%;height:auto;">
+		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logopuma.png" style="max-width:20%;height:auto;">
                 <br>
 		<video id="video" autoplay height=600 width=600 style="max-width:100%;max-height:70%;"></video>
 		<div id="Cotroller">
@@ -123,10 +124,10 @@ h1.hidden {
 		</div>
 	</div>
 	<div id="section2">
-		<image  src="logopuma.png" style="max-width:15%;height:auto;">
-		<H1 id="message">Great shot</H1>
+		<image  src="logopuma.png" style="max-width:20%;height:auto;">
 	<canvas id="canvas" width= 600 height= 600 style="max-width:70%;height:auto;">
 		</canvas>
+		<H1 id="message">Great shot</H1>
 		<div id="editor">
 			<button  id="frame1" class="imbt"><img src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/pumaframe.png" style="max-width:100%;max-height:auto;"/></button>
 			<!--  <button  id="frame2" class="imbt"><img src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/F2_128X96.png" style="max-width:100%;max-height:auto;"/></button>
