--- a/vpbv1.html
+++ b/vpbv1.html
@@ -56,7 +56,7 @@ background-color: black;
 .loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-margin-top:20px;
+margin-top:20%;
   border-top: 16px solid black;
   width: 120px;
   height: 120px;
