--- a/thankyou.html
+++ b/thankyou.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body{
-background-image: linear-gradient(to bottom right, red, red);
+background-image: linear-gradient(to bottom right, #EF4239, #EF4239);
 }
 h3 {
 margin-top: 10px;
@@ -68,9 +68,9 @@ div{
 <body>
 <center>
 	<div>
-		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logopuma.png" style="max-width:15%;height:auto;"></image>
+		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logopuma.png" style="max-width:20%;height:auto;"></image>
 			<br>
-		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/thanku.png" style="max-width:60%;height:auto;"></image>
+		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/thanku.png" style="max-width:75%;height:auto;"></image>
 		<br>
 		<h3>Get in touch with Us</h3>
 		<a href="https://deepayannandy.github.io/cft_photoboth/"><button class="button"><span>Home</span></button></a>
