--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body{
-background-image: linear-gradient(to bottom right, red, red);
+background-image: linear-gradient(to bottom right, #EF4239, #EF4239);
 }
 h1 {
-margin-top: 60px;
+margin-top: 80px;
   font-weight: bold;
   color: #fff;
   font-size: 25px;
@@ -32,7 +32,7 @@ div{
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
-  margin-top: 15%;
+  margin-top: 25%;
   margin-bottom: 5%;
 }
 
@@ -65,7 +65,7 @@ div{
 <body>
 <center>
 	<div>
-		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logopuma.png" style="max-width:20%;height:auto;">
+		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logopuma.png" style="max-width:20%;height:auto;margin-top: 60px;">
 			<br>
 		<H1>     </H1>
 		<a href="https://deepayannandy.github.io/cft_photoboth/vpbv1.html"><button class="button"><span>Take A Snap</span></button></a>
