--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ div{
   	margin-bottom: 10px;
 }
 .button {
-  border-radius: 4px;
+  border-radius: 15px;
   background-color: black;
   border: none;
   color: #FFFFFF;
@@ -68,7 +68,7 @@ div{
 		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/logopuma.png" style="max-width:20%;height:auto;margin-top: 60px;">
 			<br>
 		<H1>     </H1>
-		<a href="https://deepayannandy.github.io/cft_photoboth/vpbv1.html"><button class="button"><span>Take A Snap</span></button></a>
+		<a href="https://deepayannandy.github.io/cft_photoboth/vpbv1.html"><button class="button"><span>TAKE A SNAP</span></button></a>
 		<H1>ALWAYS LOOKS TO DO <br> BETTER <br> WE ARE FOREVER FASTER</H1>
 	</div>
 </center>
