--- a/thankyou.html
+++ b/thankyou.html
@@ -13,7 +13,7 @@ background-image: linear-gradient(to bottom right, #EF4239, #EF4239);
 h3 {
 margin-top: 10px;
   font-weight: bold;
-  color: #fff;
+  color: black;
   font-size: 20px;
   font-family: Arial;
   margin-bottom: 10px;
@@ -31,7 +31,7 @@ div{
   text-align: center;
   font-size: 28px;
   padding: 20px;
-  width: 240px;
+  width: 180px;
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
