--- a/thankyou.html
+++ b/thankyou.html
@@ -14,7 +14,7 @@ h3 {
 margin-top: 10px;
   font-weight: bold;
   color: black;
-  font-size: 20px;
+  font-size: 15px;
   font-family: Arial;
   margin-bottom: 10px;
 }
@@ -72,7 +72,7 @@ div{
 			<br>
 		<image  src="https://raw.githubusercontent.com/deepayannandy/cft_photoboth/main/thanku.png" style="max-width:75%;height:auto;"></image>
 		<br>
-		<h3>Get in touch with Us</h3>
+		<h3>Get in touch with us</h3>
 		<a href="https://deepayannandy.github.io/cft_photoboth/"><button class="button"><span>Home</span></button></a>
 		<a href="https://instagram.com/pumaindia?igshid=wp5lr45ot272"><button class="button"><span>Follow Us</span></button></a>
 	</div>
